@@ -519,6 +519,14 @@ int master_parse_entry(const char *buffer, unsigned int default_timeout, unsigne
 		return 0;
 	}
 
+	source->mc = cache_init(source);
+	if (!source->mc) {
+		error("failed to init source cache");
+		if (new)
+			master_free_mapent(new);
+		return 0;
+	}
+
 	if (new)
 		master_add_mapent(master, entry);
 
